chore : 타입스크립트 환경변수 사용관련 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "@shared/utils/*": ["src/shared/utils/*"],
       "@types/*": ["src/types/*"],
       "@widgets/*": ["src/widgets/*"]
-    }
+    },
+    "types": ["vite/client"]
   },
   "include": ["src", "vite.config.ts", "image.d.ts"],
   "exclude": ["node_modules"],
